--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="blue_main">#00AFF5</color>
+    <color name="grey_for_text">#BFBDBD</color>
+    <color name="light_blue">#6DCAE5</color>
 </resources>
