--- a/app/src/main/res/drawable/blue_round_corner_button.xml
+++ b/app/src/main/res/drawable/blue_round_corner_button.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="3dip" />
-            <solid android:color="@color/blue_main"  />
-        </shape>
-    </item>
-    <item android:state_focused="true">
-        <shape android:shape="rectangle"  >
-            <corners android:radius="3dip" />
-            <solid android:color="@color/blue_main"/>
-        </shape>
-    </item>
-    <item >
-        <shape android:shape="rectangle"  >
-            <corners android:bottomLeftRadius="3dip"/>
-            <corners android:bottomRightRadius="3dip"/>
-            <solid android:color="@color/blue_main"  />
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" android:padding="10dp">
+    <!-- you can use any color you want I used here gray color-->
+    <corners android:radius="10dp"/>
+</shape>
+<!--<selector xmlns:android="http://schemas.android.com/apk/res/android">-->
+<!--    <item android:state_pressed="true" >-->
+<!--        <shape android:shape="rectangle"  >-->
+<!--            <corners android:radius="3dip" />-->
+<!--            <solid android:color="@color/blue_main"  />-->
+<!--        </shape>-->
+<!--    </item>-->
+<!--    <item android:state_focused="true">-->
+<!--        <shape android:shape="rectangle"  >-->
+<!--            <corners android:radius="3dip" />-->
+<!--            <solid android:color="@color/blue_main"/>-->
+<!--        </shape>-->
+<!--    </item>-->
+<!--    <item >-->
+<!--        <shape android:shape="rectangle"  >-->
+<!--            <corners android:bottomLeftRadius="3dip"/>-->
+<!--            <corners android:bottomRightRadius="3dip"/>-->
+<!--            <solid android:color="@color/blue_main"  />-->
+<!--        </shape>-->
+<!--    </item>-->
+<!--</selector>-->
+
+
