--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -38,6 +39,7 @@
             android:layout_height="65dp"
             android:hint="Leaving From"
             android:padding="20dp"
+            android:id="@+id/leaving_from_text"
             />
 
         <EditText
@@ -46,6 +48,7 @@
             android:layout_marginTop="50dp"
             android:hint="Going to"
             android:padding="20dp"
+            android:id="@+id/going_to_text"
             />
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,6 +63,7 @@
                 android:paddingLeft="20dp"
                 android:background="@color/white"
                 android:paddingTop="10dp"
+                android:id="@+id/date_input"
                 />
 
             <View
@@ -76,6 +80,7 @@
                 android:paddingLeft="20dp"
                 android:paddingTop="10dp"
                 android:background="@color/white"
+                android:id="@+id/passenger_input"
                 />
 
         </LinearLayout>
@@ -85,10 +90,16 @@
             android:layout_height="60dp"
             android:textColor="@color/white"
             android:backgroundTint="@color/blue_main"
-            android:background="@drawable/blue_round_corner_button"
-            android:layout_marginTop="155dp"
+            android:layout_marginTop="160dp"
             android:text="Search"
+            android:id="@+id/search_button"
             />
     </androidx.cardview.widget.CardView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="675dp"
+        app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
