--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,185 +1,205 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".User_Profile"
-    android:background="@drawable/custom_background_blue">
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:fillViewport="false">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/profile"
-        android:textColor="@color/white"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        android:layout_margin="30dp"
-        />
+        android:background="@drawable/custom_background_blue">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/user_settings_icon"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="220dp"
-        />
+<!--        <RelativeLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:background="@drawable/custom_background_blue"-->
+<!--            tools:context=".User_Profile">-->
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/user_profile_account"
-        android:layout_marginTop="80dp"
-        />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="30dp"
+                    android:text="@string/profile"
+                    android:textColor="@color/white"
+                    android:textSize="25dp"
+                    android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/user_name"
-        android:layout_marginTop="240dp"
-        android:textColor="@color/white"
-        android:textSize="28dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="220dp"
+                    android:layout_marginTop="30dp"
+                    android:src="@drawable/user_settings_icon" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Newcomer"
-        android:layout_marginTop="280dp"
-        android:textColor="@color/white"
-        android:textSize="23dp"
-        android:gravity="center"
-        />
+            </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/user_profile_verify"
-        android:layout_marginTop="360dp"
-        android:textColor="@color/black"
-        android:textSize="23dp"
-        android:gravity="left"
-        android:textStyle="bold"
-        android:layout_marginLeft="30dp"
-        />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:src="@drawable/user_profile_account" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/user_settings_icon_black"
-            android:layout_marginTop="360dp"
-            android:layout_marginLeft="140dp"
-            />
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="240dp"
+                android:gravity="center"
+                android:text="@string/user_name"
+                android:textColor="@color/white"
+                android:textSize="28dp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/user_profile_verify_id"
-        android:layout_marginTop="400dp"
-        android:textColor="@color/blue_main"
-        android:textSize="23dp"
-        android:gravity="left"
-        android:layout_marginLeft="50dp"
-        />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="280dp"
+                android:gravity="center"
+                android:text="Newcomer"
+                android:textColor="@color/white"
+                android:textSize="23dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="30dp"
-        android:layout_marginTop="420dp">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/user_profile_check_icon"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="666dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="360dp"
+                android:gravity="left"
+                android:text="@string/user_profile_verify"
+                android:textColor="@color/black"
+                android:textSize="23dp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="140dp"
+                android:layout_marginTop="360dp"
+                android:src="@drawable/user_settings_icon_black" />
+
+
+        </LinearLayout>
+
+            <TextView
+                android:id="@+id/verify_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="400dp"
+                android:gravity="left"
+                android:text="@string/user_profile_verify_id"
+                android:textColor="@color/blue_main"
+                android:textSize="23dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="420dp"
+                android:orientation="horizontal"
+                android:padding="30dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/user_profile_check_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:text="@string/user_profile_phone"
+                    android:textColor="@color/black"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="460dp"
+                android:orientation="horizontal"
+                android:padding="30dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/user_profile_check_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:text="@string/user_profile_email"
+                    android:textColor="@color/black"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="550dp"
+                android:background="@color/grey_for_text" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="570dp"
+                android:gravity="left"
+                android:text="@string/user_profile_about"
+                android:textColor="@color/black"
+                android:textSize="23dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/add_bio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="610dp"
+                android:gravity="left"
+                android:text="@string/user_profile_write_bio"
+                android:textColor="@color/blue_main"
+                android:textSize="23dp" />
+
+            <TextView
+                android:id="@+id/mini_bio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="650dp"
+                android:gravity="left"
+                android:text="@string/user_profile_write_bio"
+                android:textColor="@color/blue_main"
+                android:textSize="23dp" />
+
         <TextView
+            android:id="@+id/add_preferences"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/user_profile_phone"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            android:layout_marginLeft="20dp"
-            />
-    </LinearLayout>
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="690dp"
+            android:gravity="left"
+            android:text="@string/user_profile_preferences"
+            android:textColor="@color/blue_main"
+            android:textSize="23dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="30dp"
-        android:layout_marginTop="460dp">
-        <ImageView
-            android:layout_width="wrap_content"
+<!--        </RelativeLayout>-->
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/user_profile_check_icon"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/user_profile_email"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            android:layout_marginLeft="20dp"
-            />
-    </LinearLayout>
+            app:menu="@menu/bottom_nav_menu"
+            android:layout_marginTop="675dp"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="550dp"
-        android:background="@color/grey_for_text" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/user_profile_about"
-        android:layout_marginTop="580dp"
-        android:textColor="@color/black"
-        android:textSize="23dp"
-        android:gravity="left"
-        android:textStyle="bold"
-        android:layout_marginLeft="30dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/user_profile_write_bio"
-        android:layout_marginTop="620dp"
-        android:textColor="@color/blue_main"
-        android:textSize="23dp"
-        android:gravity="left"
-        android:layout_marginLeft="50dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/user_profile_preferences"
-        android:layout_marginTop="660dp"
-        android:textColor="@color/blue_main"
-        android:textSize="23dp"
-        android:gravity="left"
-        android:layout_marginLeft="50dp"
-        />
-
-
-
-
-
-
-</RelativeLayout>
+</FrameLayout>
+</ScrollView>
