--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".User_Profile"
+    android:background="@drawable/custom_background_blue">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="153dp"
+            android:layout_height="135dp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="115dp"
+            app:srcCompat="@drawable/img" />
+
+        <TextView
+            android:layout_width="296dp"
+            android:layout_height="72dp"
+            android:layout_marginLeft="-240dp"
+            android:layout_marginTop="370dp"
+            android:gravity="center"
+            android:text="Your pick of rides at low prices"
+            android:textColor="@color/black"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <Button
+        android:layout_width="387dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="490dp"
+        android:layout_marginLeft="12dp"
+        android:background="@drawable/blue_round_corner_button"
+        android:backgroundTint="@color/light_blue"
+        android:text="Sign Up"
+        android:textColor="@color/white"
+        android:id="@+id/signup_button"/>
+    <Button
+        android:layout_width="387dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="580dp"
+        android:layout_marginLeft="12dp"
+        android:background="@drawable/blue_round_corner_button"
+        android:backgroundTint="@color/light_blue"
+        android:text="Log In"
+        android:textColor="@color/white"
+        android:id="@+id/login_button"/>
+</RelativeLayout>
