--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -16,16 +16,19 @@
         android:layout_marginTop="170dp"
         android:layout_marginLeft="130dp"
          />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
+        android:gravity="center"
         android:text="Your pick of rides at low prices"
-        android:layout_margin="50dp"
         android:textColor="@color/white"
         android:textSize="30dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="300dp"
