--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Landing_Page">
+    tools:context=".Search_Results">
 
     <androidx.cardview.widget.CardView
         android:layout_width="350dp"
@@ -339,7 +339,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="825dp"
+        android:layout_marginTop="640dp"
         app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
