--- a/app/src/main/res/layout/activity_booked_ride.xml
+++ b/app/src/main/res/layout/activity_booked_ride.xml
@@ -30,7 +30,7 @@
         android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="400dp"
+        android:layout_width="450dp"
         android:layout_height="80dp"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="550dp"
@@ -48,7 +48,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="350dp"
-        android:layout_height="220dp"
+        android:layout_height="270dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="170dp"
         app:cardCornerRadius="20dp">
@@ -113,8 +113,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
-            android:gravity="left"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="30dp"
+            android:gravity=""
             android:text="Himanshu"
             android:textColor="@color/black"
             android:textSize="17dp"
@@ -122,7 +123,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="120dp"
+            android:layout_marginLeft="30dp"
             android:gravity="left"
             android:text="Driver"
             android:textColor="@color/black"
@@ -132,20 +134,22 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="140dp"
-            android:gravity="left"
-            android:text="*5.0"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="150dp"
+            android:gravity="right"
+            android:text="5 *"
             android:textColor="@color/black"
-            android:textStyle="italic"
-            android:textSize="20dp" />
+            android:textSize="17dp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="170dp"
-            android:gravity="left"
+            android:layout_marginTop="200dp"
+            android:gravity="center"
             android:text="Waiting for approval,Himanshu has until tomorrow,7:10 to reply"
             android:textColor="@color/black"
+            android:textStyle="bold"
             android:textSize="17dp"
             />
 
