--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -12,10 +12,9 @@
         android:id="@+id/imageView"
         android:layout_width="153dp"
         android:layout_height="135dp"
-        app:srcCompat="@drawable/img"
-        android:layout_marginTop="170dp"
         android:layout_marginLeft="130dp"
-         />
+        android:layout_marginTop="170dp"
+        app:srcCompat="@drawable/img" />
 
     <TextView
         android:layout_width="match_parent"
