--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -51,13 +51,15 @@
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:hint=" Your Email"
-            android:padding="20dp" />
+            android:padding="20dp"
+            android:id="@+id/email_login"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_marginTop="50dp"
             android:hint="Password"
             android:padding="20dp"
+            android:id="@+id/password_login"
             />
     </androidx.cardview.widget.CardView>
     <TextView
