--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -50,32 +50,39 @@
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:hint=" Your Name"
-            android:padding="20dp" />
+            android:padding="20dp"
+            android:id="@+id/name_signup"
+            />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_marginTop="50dp"
             android:hint=" Your Email"
-            android:padding="20dp" />
+            android:padding="20dp"
+            android:id="@+id/email_signup"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_marginTop="100dp"
             android:hint=" Set Password"
-            android:padding="20dp" />
+            android:padding="20dp"
+            android:id="@+id/pswd_signup"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_marginTop="150dp"
             android:hint=" Confirm Password"
-            android:padding="20dp" />
+            android:padding="20dp"
+            android:id="@+id/cnfm_pswd_signup"
+            />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_marginTop="200dp"
             android:hint=" Mobile Number"
             android:padding="20dp"
+            android:id="@+id/mob_signup"
             />
     </androidx.cardview.widget.CardView>
 
