--- a/app/src/main/res/layout/activity_no_of_passenger_publish_ride.xml
+++ b/app/src/main/res/layout/activity_no_of_passenger_publish_ride.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".No_Of_Passenger_Publish_Ride"
     >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -72,8 +73,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/next_arrow_icon"
+        android:layout_marginLeft="270dp"
         android:layout_marginTop="400dp"
-        android:layout_marginLeft="270dp"/>
+        android:src="@drawable/next_arrow_icon" />
 
 </RelativeLayout>
