--- a/app/src/main/res/layout/activity_comfort.xml
+++ b/app/src/main/res/layout/activity_comfort.xml
@@ -1,4 +1,4 @@
-    <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -6,13 +6,21 @@
         android:layout_height="match_parent"
         tools:context=".User_Profile"
         >
-<ImageView
-android:id="@+id/imageView"
-android:layout_width="553dp"
-android:layout_height="595dp"
-android:layout_marginLeft="0dp"
-android:layout_marginTop="0dp"
-app:srcCompat="@drawable/comfort" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="553dp"
+        android:layout_height="595dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        app:srcCompat="@drawable/comfort" />
+    <ImageView
+        android:id="@+id/goBackIconcomfortPage"
+        android:layout_width="45dp"
+        android:layout_height="200dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="-60dp"
+        app:srcCompat="@drawable/back" />
 
     <TextView
         android:layout_width="wrap_content"
