--- a/app/src/main/res/layout/activity_past_rides.xml
+++ b/app/src/main/res/layout/activity_past_rides.xml
@@ -51,7 +51,7 @@
         android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/viewimage"
+        android:id="@+id/viewimage1"
         android:layout_width="70dp"
         android:layout_height="200dp"
         android:layout_marginLeft="350dp"
@@ -158,7 +158,7 @@
         android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/forward"
+        android:id="@+id/forward1"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginLeft="350dp"
@@ -166,7 +166,7 @@
         app:srcCompat="@drawable/forward" />
 
     <ImageView
-        android:id="@+id/forward"
+        android:id="@+id/forward2"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginLeft="350dp"
@@ -174,7 +174,7 @@
         app:srcCompat="@drawable/forward" />
 
     <ImageView
-        android:id="@+id/forward"
+        android:id="@+id/forward3"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginLeft="350dp"
