--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -59,6 +59,7 @@
             android:layout_marginTop="50dp"
             android:hint="Password"
             android:padding="20dp"
+            android:inputType="textPassword"
             android:id="@+id/password_login"
             />
     </androidx.cardview.widget.CardView>
