--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -66,6 +66,7 @@
             android:layout_height="65dp"
             android:layout_marginTop="100dp"
             android:hint=" Set Password"
+            android:inputType="textPassword"
             android:padding="20dp"
             android:id="@+id/pswd_signup"/>
         <EditText
@@ -73,6 +74,7 @@
             android:layout_height="65dp"
             android:layout_marginTop="150dp"
             android:hint=" Confirm Password"
+            android:inputType="textPassword"
             android:padding="20dp"
             android:id="@+id/cnfm_pswd_signup"
             />
