--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -29,15 +29,18 @@
                     android:layout_margin="30dp"
                     android:text="@string/profile"
                     android:textColor="@color/white"
-                    android:textSize="25dp"
+                    android:textSize="30dp"
                     android:textStyle="bold" />
 
-                <ImageView
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="220dp"
+                    android:layout_marginLeft="170dp"
                     android:layout_marginTop="30dp"
-                    android:src="@drawable/user_settings_icon" />
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    android:text="Logout"
+                    android:id="@+id/logout_btn"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -177,7 +180,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
-                android:layout_marginTop="740dp"
+                android:layout_marginTop="610dp"
                 android:gravity="left"
                 android:text=""
                 android:textColor="@color/blue_main"
@@ -188,9 +191,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
-            android:layout_marginTop="790dp"
+            android:layout_marginTop="670dp"
             android:gravity="left"
             android:text="@string/user_profile_preferences"
+            android:textColor="@color/blue_main"
+            android:textSize="23dp" />
+
+        <TextView
+            android:id="@+id/preferences"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="670dp"
+            android:gravity="left"
+            android:text=""
             android:textColor="@color/blue_main"
             android:textSize="23dp" />
 
