--- a/app/src/main/res/layout/activity_request_sent.xml
+++ b/app/src/main/res/layout/activity_request_sent.xml
@@ -28,7 +28,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/OK"
+        android:id="@+id/OK1"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_marginLeft="170dp"
