--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -48,82 +48,82 @@
             />
     </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="350dp"
-            android:layout_height="110dp"
-            android:layout_marginTop="170dp"
-            android:layout_marginLeft="30dp"
-            app:cardCornerRadius="20dp">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardId1"
+        android:layout_width="350dp"
+        android:layout_height="110dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="170dp"
+        app:cardCornerRadius="20dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:gravity="center"
+            android:text="Bhiwadi"
+            android:textColor="@color/black"
+            android:textSize="17dp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:gravity="right"
+            android:text="Rs. 200"
+            android:textColor="@color/black"
+            android:textSize="17dp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="30dp"
+            android:gravity="left"
+            android:text="07:10"
+            android:textColor="@color/black"
+            android:textSize="17dp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="29dp"
+            android:layout_marginTop="40dp"
+            android:gravity="left"
+            android:paddingTop="20dp"
+            android:paddingRight="110dp"
+            android:text="08:20"
+            android:textColor="@color/black"
+            android:textSize="17dp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="9dp"
+            android:layout_marginTop="40dp"
+            android:gravity="right"
+            android:paddingTop="20dp"
+            android:paddingRight="139dp"
+            android:text="Gurgaon"
+            android:textColor="@color/black"
+            android:textSize="17dp"
+            android:textStyle="normal" />
 
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Bhiwadi"
-                android:layout_margin="30dp"
-                android:textColor="@color/black"
-                android:textSize="17dp"
-                android:gravity="center"
-                android:textStyle="normal"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Rs. 200"
-                android:layout_margin="30dp"
-                android:textColor="@color/black"
-                android:textSize="17dp"
-                android:gravity="right"
-                android:textStyle="normal"
-                />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginBottom="30dp"
-                android:gravity="left"
-                android:text="07:10"
-                android:textColor="@color/black"
-                android:textSize="17dp"
-                android:textStyle="normal" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="08:20"
-                android:layout_marginLeft="29dp"
-                android:layout_marginTop="40dp"
-                android:gravity="left"
-                android:paddingTop="20dp"
-                android:paddingRight="110dp"
-                android:textColor="@color/black"
-                android:textSize="17dp"
-                android:textStyle="normal"
-                />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="9dp"
-                android:layout_marginTop="40dp"
-                android:gravity="right"
-                android:paddingTop="20dp"
-                android:paddingRight="139dp"
-                android:text="Gurgaon"
-                android:textColor="@color/black"
-                android:textSize="17dp"
-                android:textStyle="normal" />
-
-
-        </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:layout_width="350dp"
         android:layout_height="110dp"
         android:layout_marginTop="300dp"
         android:layout_marginLeft="30dp"
+        android:id="@+id/cardId2"
         app:cardCornerRadius="20dp">
 
 
@@ -189,57 +189,56 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardId3"
         android:layout_width="350dp"
         android:layout_height="110dp"
-        android:layout_marginTop="430dp"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="430dp"
         app:cardCornerRadius="20dp">
 
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Bhiwadi"
             android:layout_margin="30dp"
-            android:textColor="@color/black"
-            android:textSize="17dp"
             android:gravity="center"
-            android:textStyle="normal"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Rs. 200"
-            android:layout_margin="30dp"
+            android:text="Bhiwadi"
             android:textColor="@color/black"
             android:textSize="17dp"
-            android:gravity="right"
-            android:textStyle="normal"
-            />
+            android:textStyle="normal" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="07:10"
             android:layout_margin="30dp"
+            android:gravity="right"
+            android:text="Rs. 200"
             android:textColor="@color/black"
             android:textSize="17dp"
-            android:gravity="left"
-            android:textStyle="normal"
-            />
+            android:textStyle="normal" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="08:20"
+            android:layout_margin="30dp"
+            android:gravity="left"
+            android:text="07:10"
+            android:textColor="@color/black"
+            android:textSize="17dp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="29dp"
             android:layout_marginTop="40dp"
             android:gravity="left"
             android:paddingTop="20dp"
             android:paddingRight="110dp"
+            android:text="08:20"
             android:textColor="@color/black"
             android:textSize="17dp"
-            android:textStyle="normal"
-            />
+            android:textStyle="normal" />
 
         <TextView
             android:layout_width="match_parent"
@@ -262,6 +261,7 @@
         android:layout_height="110dp"
         android:layout_marginTop="570dp"
         android:layout_marginLeft="30dp"
+        android:id="@+id/cardId4"
         app:cardCornerRadius="20dp">
 
 
@@ -339,7 +339,9 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_marginTop="640dp"
+        android:layout_marginBottom="6dp"
         app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
