--- a/app/src/main/res/layout/activity_publish_leaving_from.xml
+++ b/app/src/main/res/layout/activity_publish_leaving_from.xml
@@ -42,7 +42,7 @@
                 android:hint="        Enter full address...."
                 android:textSize="22dp"
                 android:padding="20dp"
-                android:id="@+id/your_name_text"/>
+                android:id="@+id/place_publish"/>
             <ImageView
                 android:id="@+id/viewsearchimage"
                 android:layout_width="50dp"
@@ -161,4 +161,12 @@
         android:layout_height="1dp"
         android:layout_marginTop="510dp"
         android:background="@color/grey_for_text" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="600dp"
+        android:src="@drawable/next_arrow_icon"
+        android:id="@+id/next_leaving_from"/>
 </RelativeLayout>
