--- a/app/src/main/res/layout/activity_price_publish_ride.xml
+++ b/app/src/main/res/layout/activity_price_publish_ride.xml
@@ -73,8 +73,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/next_arrow_icon"
+        android:layout_marginLeft="270dp"
         android:layout_marginTop="400dp"
-        android:layout_marginLeft="270dp"/>
+        android:src="@drawable/next_arrow_icon" />
 
 </RelativeLayout>
