--- a/app/src/main/res/layout/activity_booking_time.xml
+++ b/app/src/main/res/layout/activity_booking_time.xml
@@ -41,18 +41,18 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="180dp"
+        android:layout_marginBottom="60dp"
         android:onClick="setTime"
-        android:text="time_save" />
+        android:text="Save Time" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:text="time_selected"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView1"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="50dp"-->
+<!--        android:text="time_selected"-->
+<!--        android:textAppearance="?android:attr/textAppearanceMedium" />-->
 
 
 </RelativeLayout>
