--- a/app/src/main/res/layout/activity_confirm_ride.xml
+++ b/app/src/main/res/layout/activity_confirm_ride.xml
@@ -6,13 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".Confirm_Ride"
     >
-    <ImageView
-        android:id="@+id/viewimage"
-        android:layout_width="70dp"
-        android:layout_height="200dp"
-        android:layout_marginLeft="350dp"
-        android:layout_marginTop="-50dp"
-        app:srcCompat="@drawable/img" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/goBackIconConfirmRidePage"
+            android:layout_width="45dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginTop="-60dp"
+            app:srcCompat="@drawable/back" />
+
+        <ImageView
+            android:id="@+id/imageLogoConfirmRide"
+            android:layout_width="70dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="270dp"
+            android:layout_marginTop="-60dp"
+            app:srcCompat="@drawable/img" />
+
+    </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="147dp"
@@ -126,30 +141,5 @@
         android:id="@+id/search"
         />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <FrameLayout
-            android:id="@+id/frameLayout"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        </FrameLayout>
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
-            app:menu="@menu/bottom_nav_menu" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
