--- a/app/src/main/res/layout/activity_drop_off_publish_ride.xml
+++ b/app/src/main/res/layout/activity_drop_off_publish_ride.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".Drop_Off_Publish_Ride"
     >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/goBackIconPricePublishPage"
+            android:id="@+id/goBackIconDropOffPage"
             android:layout_width="45dp"
             android:layout_height="200dp"
             android:layout_marginLeft="14dp"
@@ -67,6 +68,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/next_arrow_icon"
         android:layout_marginTop="400dp"
-        android:layout_marginLeft="270dp"/>
+        android:layout_marginLeft="270dp"
+        android:id="@+id/next_icon_drop_off_publish"/>
 
 </RelativeLayout>
