--- a/app/src/main/res/layout/activity_publish_return_trip.xml
+++ b/app/src/main/res/layout/activity_publish_return_trip.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/back"
+            android:id="@+id/goBackPublishReturnTrip"
             android:layout_width="45dp"
             android:layout_height="200dp"
             android:layout_marginLeft="14dp"
@@ -56,10 +56,6 @@
         android:textColor="@color/black"
         android:textSize="25dp"
         android:textStyle="bold"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
 
         <TextView
             android:layout_width="match_parent"
@@ -69,27 +65,15 @@
             android:text=" Yeah Sure !"
             android:textColor="@color/black"
             android:textSize="25dp"
+            android:id="@+id/yes_publish_return_trip"
             />
 
-        <ImageView
-            android:id="@+id/next_icon"
-            android:layout_width="70dp"
-            android:layout_height="200dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/next_icon" />
-
-    </LinearLayout>
     <View
         android:layout_width="550dp"
         android:layout_height="1dp"
         android:layout_marginTop="510dp"
         android:background="@color/grey_for_text" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
 
         <TextView
             android:layout_width="match_parent"
@@ -98,15 +82,8 @@
             android:layout_marginTop="550dp"
             android:text=" No Thanks !"
             android:textColor="@color/black"
-            android:textSize="25dp" />
+            android:textSize="25dp"
+            android:id="@+id/no_publish_return_trip"/>
 
-        <ImageView
-            android:id="@+id/publish_next"
-            android:layout_width="70dp"
-            android:layout_height="200dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/next_icon" />
 
-    </LinearLayout>
 </RelativeLayout>
